--- a/GPS Sim/Properties/Settings.settings
+++ b/GPS Sim/Properties/Settings.settings
@@ -6,37 +6,40 @@
       <Value Profile="(Default)">C:\Users\mila\Documents</Value>
     </Setting>
     <Setting Name="RecentlyReplayedFile0" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test\Dir</Value>
+      <Value Profile="(Default)">C:\path</Value>
     </Setting>
     <Setting Name="RecentlyReplayedFile1" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test1\Dir</Value>
+      <Value Profile="(Default)">sedfr</Value>
     </Setting>
     <Setting Name="RecentlyReplayedFile2" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test2\Dir</Value>
+      <Value Profile="(Default)">sdf</Value>
     </Setting>
     <Setting Name="RecentlyReplayedFile3" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test3\Dir</Value>
+      <Value Profile="(Default)">sdf</Value>
     </Setting>
     <Setting Name="RecentlyReplayedFile4" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test4\Dir</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RecentlyReplayedFile5" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test5\Dir</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RecentlyReplayedFile6" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test6\Dir</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RecentlyReplayedFile7" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test7\Dir</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RecentlyReplayedFile8" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test8\Dir</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RecentlyReplayedFile9" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Test9\Dir</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="PathOfFileToGenerate" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Users\mila\Desktop\Baskerville_lap.csv</Value>
+    </Setting>
+    <Setting Name="Test" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
